@@ -19,14 +19,17 @@ App::Anchr - Assembler of N-free CHRomosomes
 =head1 SYNOPSIS
 
     anchr <command> [-?h] [long options...]
-    	-? -h --help    show help
+            -? -h --help    show help
 
     Available commands:
 
       commands: list the application's commands
           help: display a command's help screen
 
-See C<anchr commands> for usage information.
+      dazzname: rename FASTA reads for dazz_db
+           dep: check or install dependances
+
+Run C<anchr commands> for usage information.
 
 =head1 DESCRIPTION
 
